--- a/management-report/markdown/subpage-trends.Rmd
+++ b/management-report/markdown/subpage-trends.Rmd
@@ -497,56 +497,7 @@ Row
 Row {.tabset data-height=1240}
 ----------------------------------------------------------------------
 
-### **Percentage of estimated diagnoses referred to PDS**
-
-```{r dropdown-exp}
-pds_exp_rates <- left_join(
-bind_rows(pds_scot_totals, pds_hb_totals) %>% filter(fy != current_fy),
-exp %>% select(-health_board) %>% rename(geog = health_board_label)) %>% 
-  mutate(exp_rate = round(100*total_referrals/diagnoses,1))
-
-pds_exp_rates$geog<- factor(pds_exp_rates$geog, levels = unique(pds_exp_rates$geog))
-
-pds_exp_rates_data <- SharedData$new(pds_exp_rates)
-
-data_filter_exp_trend <- filter_select(id = "trend_filter_outcomes_exp",
-                                    label = "Select Health Board(s):",
-                                    group = ~geog,
-                                    sharedData = pds_exp_rates_data
-                                   )
-bscols(widths = c(1,10,NA),NULL,
-data_filter_exp_trend,NULL)
-
-```
-
-<h2 style="margin-left: 70px; margin-top: 0px; margin-bottom: 0px"> Percentage of people estimated to be newly diagnosed with dementia who were referred for post-diagnostic support</h2>
-```{r trend-plot-exp}
-
- trends_exp_plot <- plot_trend_perc(pds_exp_rates_data, exp_rate, x ="Financial Year of Diagnosis", colours = phs_colours_46)
-
-bscols(widths = 12,
-        div(style = css(width="98%", height="385px"),
- trends_exp_plot)
-)
-```
-
-```{r trend-table-exp}
-
-pds_exp_rates %>% select(geog, fy, exp_rate) %>% 
-            pivot_wider(names_from = fy, values_from = exp_rate) %>%
-            mutate(across(where(is.numeric), ~paste0(.,"%"))) %>% 
-            rename(`Health Board` = geog) %>%
-            kable(align = c("l", rep("r", length(unique(pds_exp_rates$fy))))) %>%
-            kable_styling(full_width = TRUE) %>%
-            column_spec(1, bold = TRUE) %>%
-  # Add header above table
-            add_header_above(
-                    c(" " = 1,
-                     "Financial Year of Diagnosis" = length(unique(pds_exp_rates$fy))))
-
-```
-
-### **Percentage of LDP standard achieved**
+### **Percentage of LDP Standard achieved**
 
 ```{r dropdown-met-ldp}
 pds_met_rates <-
@@ -595,6 +546,55 @@ pds_met_rates %>% select(geog, fy, perc_met) %>%
                     c(" " = 1,
                      "Financial Year of Diagnosis" = length(unique(pds_exp_rates$fy)))) %>% 
   scroll_box(height = "670px")
+
+```
+
+### **Percentage of estimated diagnoses referred to PDS**
+
+```{r dropdown-exp}
+pds_exp_rates <- left_join(
+bind_rows(pds_scot_totals, pds_hb_totals) %>% filter(fy != current_fy),
+exp %>% select(-health_board) %>% rename(geog = health_board_label)) %>% 
+  mutate(exp_rate = round(100*total_referrals/diagnoses,1))
+
+pds_exp_rates$geog<- factor(pds_exp_rates$geog, levels = unique(pds_exp_rates$geog))
+
+pds_exp_rates_data <- SharedData$new(pds_exp_rates)
+
+data_filter_exp_trend <- filter_select(id = "trend_filter_outcomes_exp",
+                                    label = "Select Health Board(s):",
+                                    group = ~geog,
+                                    sharedData = pds_exp_rates_data
+                                   )
+bscols(widths = c(1,10,NA),NULL,
+data_filter_exp_trend,NULL)
+
+```
+
+<h2 style="margin-left: 70px; margin-top: 0px; margin-bottom: 0px"> Percentage of people estimated to be newly diagnosed with dementia who were referred for post-diagnostic support</h2>
+```{r trend-plot-exp}
+
+ trends_exp_plot <- plot_trend_perc(pds_exp_rates_data, exp_rate, x ="Financial Year of Diagnosis", colours = phs_colours_46)
+
+bscols(widths = 12,
+        div(style = css(width="98%", height="385px"),
+ trends_exp_plot)
+)
+```
+
+```{r trend-table-exp}
+
+pds_exp_rates %>% select(geog, fy, exp_rate) %>% 
+            pivot_wider(names_from = fy, values_from = exp_rate) %>%
+            mutate(across(where(is.numeric), ~paste0(.,"%"))) %>% 
+            rename(`Health Board` = geog) %>%
+            kable(align = c("l", rep("r", length(unique(pds_exp_rates$fy))))) %>%
+            kable_styling(full_width = TRUE) %>%
+            column_spec(1, bold = TRUE) %>%
+  # Add header above table
+            add_header_above(
+                    c(" " = 1,
+                     "Financial Year of Diagnosis" = length(unique(pds_exp_rates$fy))))
 
 ```
 
